[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Castes/Caste.gd" type="Script" id=1]
[ext_resource path="res://Themes/AutocratTheme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.494118, 0.12549, 0.12549, 1 )

[node name="Caste" type="Control"]
margin_right = 276.0
margin_bottom = 128.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 273.0
margin_bottom = 132.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="."]
margin_right = 272.0
margin_bottom = 36.0

[node name="EditButton" type="Button" parent="."]
margin_left = 16.2757
margin_top = 81.3784
margin_right = 110.276
margin_bottom = 118.379
theme = ExtResource( 2 )
text = "Edit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewButton" type="Button" parent="."]
margin_left = 138.226
margin_top = 82.0
margin_right = 232.226
margin_bottom = 118.0
theme = ExtResource( 2 )
text = "View"
[connection signal="pressed" from="EditButton" to="." method="_on_EditButton_pressed"]
[connection signal="pressed" from="ViewButton" to="." method="_on_ViewButton_pressed"]
